welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:9: error: expected class or object definition
def inf (a:Int , b:Int): Int = {
^close10:13: error: Unmatched closing brace '}' ignored here
 }
 ^